@@ -240,6 +240,8 @@ x2goclient (4.0.3.2-0x2go1) unstable; urgency=medium
     - Enable -O2 in debug mode. Otherwise, debug mode would test different
       execution paths than release mode.
     - Add new UNUSED() macro to x2goutils.h and silence compiler warnings.
+    - Fix some QMessageBox usages. There are many more places that need
+      fixing...
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 12:49:22 +0100
 
